@@ -3,6 +3,7 @@ language: python
 
 # Version number
 python:
+  - "3.4"
   - "3.5"
   - "3.6"
   - pypy3
@@ -11,8 +12,8 @@ before_install:
   - pip install --upgrade pip setuptools
   - pip install nose2 coverage
 
-#install:
-#  - pip install -r requirements.txt
+install:
+  - pip install -r requirements.txt
 
 before_script:
   - mkdir -p shippable/testresults
