@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py35,py36,pypy3
+envlist = py34,py35,py36,pypy3
 
 [testenv]
 commands = {envpython} setup.py test
